--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^9.16.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-context-api": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
     "react-icons": "^4.7.1",
