--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-uuid": "^2.0.0",
     "tss-react": "^4.5.2",
     "web-vitals": "^2.1.4"
   },
